EXTRA_DIST = IconsAndImages.tcl mainwindow.tcl snitbuttonbox.tcl \
	     snitdialog.tcl snitLFs.tcl snitmainframe.tcl snitscrollw.tcl \
	     snitStdMenuBar.tcl close.gif DeepwoodsBanner.gif new.gif \
	     open.gif print.gif save.gif gray50.xbm info.xbm questhead.xbm \
	     openfold.gif palette.gif unknown.gif DynamicHelp.tcl gettext.tcl
